@@ -9,10 +9,3 @@ stage 'Unit test'
            }
         }
     }
-stage 'Commit changes'
-  node('android') {
-      checkout scm
-      withEnv(['GRADLE_HOME=/var/jenkins_home/tools/gradle', 'GRADLE_OPTS="-Dorg.gradle.daemon=true -Xmx1024m -Xms512m -XX:MaxPermSize=2048m"', 'ANDROID_HOME=/var/jenkins_home/tools/android-sdk']) {
-             sh 'git checkout origin/GIT_BRANCH'
-      }
-  }
